[package]
name = "actix-ecomm"
version = "0.1.0"
authors = ["etrnal70 <etrnal70@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.3"
serde = "1.0.118"
serde_json = "1.0.60"
anyhow = "1.0.35"
